# HydraTemplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindHydra.cmake
src/: CMakeLists.txt  Empty.cpp  PhSp.cpp
